mldslls/dslf_language_helpers/gen/MLDSLParser.py
# Generated from D:/PhD/Projects/Framework/mldsl-language-server-master/mldslls/dslf_language_helpers/MLDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MLDSLParser ( Parser ):

    grammarFileName = "MLDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'load'", "'dataset'", "'from'", "'model'", 
                     "'save'", "'to'", "'metrics'", "'show'", "','", "'set'", 
                     "':'", "'preprocess'", "'using'", "'on'", "'split'", 
                     "'train'", "'validate'", "'evaluate'", "'tune'", "'('", 
                     "')'", "'compare'", "'models'", "'predict'", "'step'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "FLOAT", "STRING", 
                      "ID", "CODE", "WS", "COMMENT", "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_load = 2
    RULE_load_dataset = 3
    RULE_load_model = 4
    RULE_save = 5
    RULE_save_dataset = 6
    RULE_save_model = 7
    RULE_save_metrics = 8
    RULE_show = 9
    RULE_show_dataset = 10
    RULE_show_model = 11
    RULE_show_metrics = 12
    RULE_dataset_details = 13
    RULE_model_details = 14
    RULE_metrics_details = 15
    RULE_set = 16
    RULE_preprocess = 17
    RULE_preprocess_method = 18
    RULE_method_name = 19
    RULE_split = 20
    RULE_split_method = 21
    RULE_split_method_name = 22
    RULE_train = 23
    RULE_model = 24
    RULE_validate = 25
    RULE_validation_metrics = 26
    RULE_evaluate = 27
    RULE_evalutaion_metrics = 28
    RULE_tune = 29
    RULE_hyperparameters = 30
    RULE_hyperparameter = 31
    RULE_compare = 32
    RULE_model_list = 33
    RULE_predict = 34
    RULE_py_injection = 35
    RULE_python_code = 36
    RULE_parameters = 37
    RULE_parameter = 38
    RULE_value = 39
    RULE_range = 40
    RULE_list = 41
    RULE_list_element = 42
    RULE_number = 43
    RULE_dataset_name = 44
    RULE_model_name = 45
    RULE_file_path = 46
    RULE_sql_config = 47
    RULE_url = 48
    RULE_detail = 49
    RULE_var_id = 50
    RULE_columns = 51
    RULE_column = 52
    RULE_record = 53
    RULE_metric = 54
    RULE_id = 55

    ruleNames =  [ "program", "statement", "load", "load_dataset", "load_model", 
                   "save", "save_dataset", "save_model", "save_metrics", 
                   "show", "show_dataset", "show_model", "show_metrics", 
                   "dataset_details", "model_details", "metrics_details", 
                   "set", "preprocess", "preprocess_method", "method_name", 
                   "split", "split_method", "split_method_name", "train", 
                   "model", "validate", "validation_metrics", "evaluate", 
                   "evalutaion_metrics", "tune", "hyperparameters", "hyperparameter", 
                   "compare", "model_list", "predict", "py_injection", "python_code", 
                   "parameters", "parameter", "value", "range", "list", 
                   "list_element", "number", "dataset_name", "model_name", 
                   "file_path", "sql_config", "url", "detail", "var_id", 
                   "columns", "column", "record", "metric", "id" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    INT=26
    FLOAT=27
    STRING=28
    ID=29
    CODE=30
    WS=31
    COMMENT=32
    NEWLINE=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MLDSLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return MLDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MLDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.statement()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1095734562) != 0)):
                    break

            self.state = 117
            self.match(MLDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def load(self):
            return self.getTypedRuleContext(MLDSLParser.LoadContext,0)


        def save(self):
            return self.getTypedRuleContext(MLDSLParser.SaveContext,0)


        def show(self):
            return self.getTypedRuleContext(MLDSLParser.ShowContext,0)


        def set_(self):
            return self.getTypedRuleContext(MLDSLParser.SetContext,0)


        def preprocess(self):
            return self.getTypedRuleContext(MLDSLParser.PreprocessContext,0)


        def split(self):
            return self.getTypedRuleContext(MLDSLParser.SplitContext,0)


        def train(self):
            return self.getTypedRuleContext(MLDSLParser.TrainContext,0)


        def validate(self):
            return self.getTypedRuleContext(MLDSLParser.ValidateContext,0)


        def evaluate(self):
            return self.getTypedRuleContext(MLDSLParser.EvaluateContext,0)


        def tune(self):
            return self.getTypedRuleContext(MLDSLParser.TuneContext,0)


        def compare(self):
            return self.getTypedRuleContext(MLDSLParser.CompareContext,0)


        def predict(self):
            return self.getTypedRuleContext(MLDSLParser.PredictContext,0)


        def py_injection(self):
            return self.getTypedRuleContext(MLDSLParser.Py_injectionContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MLDSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.load()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.save()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.show()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.set_()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.preprocess()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 6)
                self.state = 124
                self.split()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 125
                self.train()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 8)
                self.state = 126
                self.validate()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 9)
                self.state = 127
                self.evaluate()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 10)
                self.state = 128
                self.tune()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 11)
                self.state = 129
                self.compare()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 12)
                self.state = 130
                self.predict()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 13)
                self.state = 131
                self.py_injection()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def load_dataset(self):
            return self.getTypedRuleContext(MLDSLParser.Load_datasetContext,0)


        def load_model(self):
            return self.getTypedRuleContext(MLDSLParser.Load_modelContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_load

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoad" ):
                listener.enterLoad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoad" ):
                listener.exitLoad(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad" ):
                return visitor.visitLoad(self)
            else:
                return visitor.visitChildren(self)




    def load(self):

        localctx = MLDSLParser.LoadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_load)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(MLDSLParser.T__0)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 135
                self.load_dataset()
                pass
            elif token in [4]:
                self.state = 136
                self.load_model()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Load_datasetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_path(self):
            return self.getTypedRuleContext(MLDSLParser.File_pathContext,0)


        def sql_config(self):
            return self.getTypedRuleContext(MLDSLParser.Sql_configContext,0)


        def url(self):
            return self.getTypedRuleContext(MLDSLParser.UrlContext,0)


        def dataset_name(self):
            return self.getTypedRuleContext(MLDSLParser.Dataset_nameContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_load_dataset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoad_dataset" ):
                listener.enterLoad_dataset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoad_dataset" ):
                listener.exitLoad_dataset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad_dataset" ):
                return visitor.visitLoad_dataset(self)
            else:
                return visitor.visitChildren(self)




    def load_dataset(self):

        localctx = MLDSLParser.Load_datasetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_load_dataset)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MLDSLParser.T__1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 140
                self.dataset_name()


            self.state = 143
            self.match(MLDSLParser.T__2)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 144
                self.file_path()
                pass

            elif la_ == 2:
                self.state = 145
                self.sql_config()
                pass

            elif la_ == 3:
                self.state = 146
                self.url()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Load_modelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_path(self):
            return self.getTypedRuleContext(MLDSLParser.File_pathContext,0)


        def model_name(self):
            return self.getTypedRuleContext(MLDSLParser.Model_nameContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_load_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoad_model" ):
                listener.enterLoad_model(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoad_model" ):
                listener.exitLoad_model(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad_model" ):
                return visitor.visitLoad_model(self)
            else:
                return visitor.visitChildren(self)




    def load_model(self):

        localctx = MLDSLParser.Load_modelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_load_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MLDSLParser.T__3)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 150
                self.model_name()


            self.state = 153
            self.match(MLDSLParser.T__2)
            self.state = 154
            self.file_path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def save_dataset(self):
            return self.getTypedRuleContext(MLDSLParser.Save_datasetContext,0)


        def save_model(self):
            return self.getTypedRuleContext(MLDSLParser.Save_modelContext,0)


        def save_metrics(self):
            return self.getTypedRuleContext(MLDSLParser.Save_metricsContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_save

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSave" ):
                listener.enterSave(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSave" ):
                listener.exitSave(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSave" ):
                return visitor.visitSave(self)
            else:
                return visitor.visitChildren(self)




    def save(self):

        localctx = MLDSLParser.SaveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_save)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MLDSLParser.T__4)
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 157
                self.save_dataset()
                pass
            elif token in [4]:
                self.state = 158
                self.save_model()
                pass
            elif token in [7]:
                self.state = 159
                self.save_metrics()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Save_datasetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_path(self):
            return self.getTypedRuleContext(MLDSLParser.File_pathContext,0)


        def dataset_name(self):
            return self.getTypedRuleContext(MLDSLParser.Dataset_nameContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_save_dataset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSave_dataset" ):
                listener.enterSave_dataset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSave_dataset" ):
                listener.exitSave_dataset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSave_dataset" ):
                return visitor.visitSave_dataset(self)
            else:
                return visitor.visitChildren(self)




    def save_dataset(self):

        localctx = MLDSLParser.Save_datasetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_save_dataset)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MLDSLParser.T__1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 163
                self.dataset_name()


            self.state = 166
            self.match(MLDSLParser.T__5)
            self.state = 167
            self.file_path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Save_modelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_path(self):
            return self.getTypedRuleContext(MLDSLParser.File_pathContext,0)


        def model_name(self):
            return self.getTypedRuleContext(MLDSLParser.Model_nameContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_save_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSave_model" ):
                listener.enterSave_model(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSave_model" ):
                listener.exitSave_model(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSave_model" ):
                return visitor.visitSave_model(self)
            else:
                return visitor.visitChildren(self)




    def save_model(self):

        localctx = MLDSLParser.Save_modelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_save_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(MLDSLParser.T__3)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 170
                self.model_name()


            self.state = 173
            self.match(MLDSLParser.T__5)
            self.state = 174
            self.file_path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Save_metricsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_path(self):
            return self.getTypedRuleContext(MLDSLParser.File_pathContext,0)


        def model_name(self):
            return self.getTypedRuleContext(MLDSLParser.Model_nameContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_save_metrics

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSave_metrics" ):
                listener.enterSave_metrics(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSave_metrics" ):
                listener.exitSave_metrics(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSave_metrics" ):
                return visitor.visitSave_metrics(self)
            else:
                return visitor.visitChildren(self)




    def save_metrics(self):

        localctx = MLDSLParser.Save_metricsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_save_metrics)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(MLDSLParser.T__6)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 177
                self.model_name()


            self.state = 180
            self.match(MLDSLParser.T__5)
            self.state = 181
            self.file_path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def show_dataset(self):
            return self.getTypedRuleContext(MLDSLParser.Show_datasetContext,0)


        def show_model(self):
            return self.getTypedRuleContext(MLDSLParser.Show_modelContext,0)


        def show_metrics(self):
            return self.getTypedRuleContext(MLDSLParser.Show_metricsContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_show

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow" ):
                listener.enterShow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow" ):
                listener.exitShow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow" ):
                return visitor.visitShow(self)
            else:
                return visitor.visitChildren(self)




    def show(self):

        localctx = MLDSLParser.ShowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_show)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(MLDSLParser.T__7)
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 184
                self.show_dataset()
                pass
            elif token in [4]:
                self.state = 185
                self.show_model()
                pass
            elif token in [7]:
                self.state = 186
                self.show_metrics()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_datasetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataset_name(self):
            return self.getTypedRuleContext(MLDSLParser.Dataset_nameContext,0)


        def dataset_details(self):
            return self.getTypedRuleContext(MLDSLParser.Dataset_detailsContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_show_dataset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_dataset" ):
                listener.enterShow_dataset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_dataset" ):
                listener.exitShow_dataset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_dataset" ):
                return visitor.visitShow_dataset(self)
            else:
                return visitor.visitChildren(self)




    def show_dataset(self):

        localctx = MLDSLParser.Show_datasetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_show_dataset)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(MLDSLParser.T__1)
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 190
                self.dataset_name()


            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 193
                self.dataset_details()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_modelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def model_name(self):
            return self.getTypedRuleContext(MLDSLParser.Model_nameContext,0)


        def model_details(self):
            return self.getTypedRuleContext(MLDSLParser.Model_detailsContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_show_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_model" ):
                listener.enterShow_model(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_model" ):
                listener.exitShow_model(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_model" ):
                return visitor.visitShow_model(self)
            else:
                return visitor.visitChildren(self)




    def show_model(self):

        localctx = MLDSLParser.Show_modelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_show_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(MLDSLParser.T__3)
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 197
                self.model_name()


            self.state = 201
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 200
                self.model_details()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_metricsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def model_name(self):
            return self.getTypedRuleContext(MLDSLParser.Model_nameContext,0)


        def metrics_details(self):
            return self.getTypedRuleContext(MLDSLParser.Metrics_detailsContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_show_metrics

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_metrics" ):
                listener.enterShow_metrics(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_metrics" ):
                listener.exitShow_metrics(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_metrics" ):
                return visitor.visitShow_metrics(self)
            else:
                return visitor.visitChildren(self)




    def show_metrics(self):

        localctx = MLDSLParser.Show_metricsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_show_metrics)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.match(MLDSLParser.T__6)
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 204
                self.model_name()


            self.state = 208
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 207
                self.metrics_details()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dataset_detailsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def detail(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.DetailContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.DetailContext,i)


        def getRuleIndex(self):
            return MLDSLParser.RULE_dataset_details

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataset_details" ):
                listener.enterDataset_details(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataset_details" ):
                listener.exitDataset_details(self)
